Adjust width to prevent overflow on mobile

--- a/src/components/Nav/nav.css
+++ b/src/components/Nav/nav.css
@@ -4,6 +4,7 @@
     justify-content: flex-start;
     padding:1rem;
     position:relative;
+    width:100vw;
 }
 .navLink{
     color:white;
@@ -17,16 +18,16 @@
 .expanded{
     position: fixed;
     top:0;
-    right:0;
-    width:100vw;
+    /* right:50;s */
+    width:90vw;
     height:100vh;
 }
 .expanded::before{
     content:'';
     position:fixed;
     top:0;
-    right:0;
-    width:100vw;
+    left:0;
+    width:90vw;
     height:100vh;
     opacity:0.6;
     background-color: #2b2b2b;
@@ -52,7 +53,7 @@
         justify-content: space-around;
         width:100vw;
     }
-    .menu{
+    .menu,.back{
         display:none;
     }
     
