--- a/src/pages/Article/article.css
+++ b/src/pages/Article/article.css
@@ -1,3 +1,7 @@
+.article{
+    padding:1rem;
+    width:100vw;
+}
 .articleImg{
-    max-width: 95vw;
+    max-width: calc(100vw - 2rem);
 }
